fix: image viewer, spoiler align

--- a/src/components/common/messaging/attachments/Attachment.module.scss
+++ b/src/components/common/messaging/attachments/Attachment.module.scss
@@ -99,3 +99,7 @@
         background: var(--background);
     }
 }
+
+.lightgallery {
+    grid-area: 1 / 1;
+}
